--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=user
+spring.datasource.url=jdbc:mysql://localhost:3306/auffuser
+spring.datasource.username=auff
+spring.datasource.password=0404
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=mysql
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
+spring.flyway.url=jdbc:mysql://localhost:3306/auffuser
+spring.flyway.user=auff
+spring.flyway.password=0404
+spring.flyway.locations=classpath:db/migration
