--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/auffuser
 spring.datasource.username=auff
 spring.datasource.password=0404
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database=mysql
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
